discussion/kv_engine/176712/176712_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52490: Pass Producer to BackfillManagerTask

The ownership hierarchy is the following:

  Producer
    -> BackfillManager
      -> BackfillTask
        -> BackfillManager (weak)

, with Task that stores a weak reference to Manager.

That model allows scenarios where a Producer connection has gone but
Task/Manager are still alive. Task needs to run a backfill for
realizing that the connection has been removed.

With this change we give Task a direct weak reference to Producer.
That way, Task would spot a dead Producer (and thus cancel itself)
before entering any backfill scan-loop.

Change-Id: I436cf6a7d5b5ebba6a913aa1e803c5c31dfaeac1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-06-27 10:04:01.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-27 10:04:13.000000000
Message: 
Patch Set 3: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/304210/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-27 10:06:32.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/404/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/404/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/305/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/305/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/296/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/296/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/313/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/313/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/303/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/303/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/303/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/303/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/434/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/434/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/292/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/292/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/294/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:141:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->schedule(managerTask);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:210:17: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
                ExecutorPool::get()->wake(managerTask->getId());
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:363:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/294/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/294/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17472/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
